# ChangeLog for dev-tex/pdftex
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/pdftex/ChangeLog,v 1.20 2009/12/12 12:27:23 aballier Exp $

  12 Dec 2009; Alexis Ballier <aballier@gentoo.org> pdftex-1.40.9.ebuild,
  pdftex-1.40.10.ebuild:
  Set LC_ALL to C to avoid problems with different locales, bug #293199

*pdftex-1.40.10 (12 Dec 2009)

  12 Dec 2009; Alexis Ballier <aballier@gentoo.org> +pdftex-1.40.10.ebuild,
  +files/pdftex-1.40.10-poppler.patch:
  version bump

  27 Aug 2009; Alexis Ballier <aballier@gentoo.org> pdftex-1.40.9.ebuild,
  +files/pdftex-1.40.9-poppler-0.11.3.patch:
  Fix build with latest poppler, bug #282833

  23 May 2009; Alexis Ballier <aballier@gentoo.org> pdftex-1.40.9.ebuild,
  +files/pdftex-1.40.9-getline.patch:
  fix build with glibc 2.10, bug #270779, ported from tl-core

  14 May 2009; Alexis Ballier <aballier@gentoo.org> pdftex-1.40.9.ebuild,
  +files/pdftex-1.40.9-poppler-0.11.patch:
  fix build with latest poppler, bug #269545

  30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org> pdftex-1.40.9.ebuild:
  Update dependencies w.r.t. bug 264230, fully-split-out poppler transition.

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> pdftex-1.40.9.ebuild:
  alpha/arm/ia64/s390/sh stable wrt #253551

  11 Mar 2009; Markus Meier <maekke@gentoo.org> pdftex-1.40.9.ebuild:
  amd64 stable, bug #253551

  10 Mar 2009; Raúl Porcel <armin76@gentoo.org> pdftex-1.40.9.ebuild:
  Add ~arm/~s390/~sh

  07 Mar 2009; Christian Faulhammer <fauli@gentoo.org> pdftex-1.40.9.ebuild:
  x86 stable, bug 253551

  06 Mar 2009; Jeroen Roovers <jer@gentoo.org> pdftex-1.40.9.ebuild:
  Stable for HPPA (bug #253551).

  27 Feb 2009; Ferris McCormick <fmccor@gentoo.org> pdftex-1.40.9.ebuild:
  Sparc stable, part of Bug #253551.

  19 Nov 2008; Ferris McCormick <fmccor@gentoo.org> pdftex-1.40.9.ebuild:
  Add ~sparc for testing, cleanup for Bug #237202.
