@@ -1,6 +1,9 @@
 # ChangeLog for dev-tex/pdftex
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/pdftex/ChangeLog,v 1.20 2009/12/12 12:27:23 aballier Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/pdftex/ChangeLog,v 1.21 2010/01/09 14:30:21 aballier Exp $
+
+  09 Jan 2010; Alexis Ballier <aballier@gentoo.org> pdftex-1.40.10.ebuild:
+  Use system kpathsea with texlive 2009
 
   12 Dec 2009; Alexis Ballier <aballier@gentoo.org> pdftex-1.40.9.ebuild,
   pdftex-1.40.10.ebuild:
